# mp4-manipulator

./: .clang-format  .gitmodules  CMakeLists.txt  License  Readme.md
.github/workflows/: Readme.md  build_linux.yml  build_macos.yml  build_win.yml  lint_linux.yml
include/: atom.h  atom_inspector.h  atom_tree_model.h  file_utils.h  main_window.h  position_aware_atom_factory.h  result.h
include/gui/: atom_tree_model.h  atom_tree_view.h  main_window.h
include/parsing/: atom.h  atom_holder.h  atom_inspector.h  atom_path_utils.h  file_utils.h  position_aware_atom_factory.h
source/: atom.cpp  atom_inspector.cpp  atom_tree_model.cpp  file_utils.cpp  main.cpp  main_window.cpp  position_aware_atom_factory.cpp
source/gui/: atom_tree_model.cpp  atom_tree_view.cpp  main_window.cpp
source/parsing/: atom.cpp  atom_holder.cpp  atom_inspector.cpp  atom_path_utils.cpp  file_utils.cpp  position_aware_atom_factory.cpp
